# sungrid-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  manage.py  pyproject.toml
apps/core/: admin.py  models.py  permissions.py  serializers.py  urls.py  urls_auth.py  views.py  views_auth.py  views_health.py
apps/core/migrations/: 0001_initial.py  0002_alter_user_date_joined_alter_user_groups_and_more.py
apps/core/tests/: test_auth.py  test_models.py  test_permissions.py
apps/maneuvers/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/maneuvers/migrations/: 0001_initial.py  0002_rename_maneuvers_m_timesta_868f7a_idx_maneuvers_m_timesta_7ca047_idx_and_more.py
apps/maneuvers/tests/: test_api.py
apps/protocol/: __init__.py  apps.py  rwk35.py
apps/protocol/tests/: test_rwk35.py
apps/telemetry/: admin.py  apps.py  consumers.py  models.py  serializers.py  urls.py  views.py
apps/telemetry/migrations/: 0001_initial.py  0002_rename_telemetry_a_telemet_657053_idx_telemetry_a_telemet_e2b3cc_idx_and_more.py  0003_telemetryrecord_p_telemetryrecord_q.py  0004_telemetryrecord_high_gas_and_more.py
apps/telemetry/tests/: test_api.py  test_models.py
apps/workers/: apps.py
apps/workers/management/commands/: poll_reclosers.py  prune_telemetry.py
apps/workers/tests/: test_poll.py
sungrid/: asgi.py  routing.py  urls.py  wsgi.py
sungrid/settings/: base.py  dev.py  prod.py
